--- a/index.html
+++ b/index.html
@@ -4391,3 +4391,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
