--- a/index.html
+++ b/index.html
@@ -1341,3 +1341,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
