--- a/index.html
+++ b/index.html
@@ -4389,3 +4389,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
