--- a/index.html
+++ b/index.html
@@ -4395,3 +4395,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
