--- a/index.html
+++ b/index.html
@@ -4393,3 +4393,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
