--- a/index.html
+++ b/index.html
@@ -1353,3 +1353,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
