--- a/index.html
+++ b/index.html
@@ -1355,3 +1355,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<link rel="stylesheet" href="styles.css">
