--- a/index.html
+++ b/index.html
@@ -4411,3 +4411,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
