--- a/index.html
+++ b/index.html
@@ -4409,3 +4409,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
