--- a/index.html
+++ b/index.html
@@ -1395,3 +1395,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
