--- a/index.html
+++ b/index.html
@@ -1401,3 +1401,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
