--- a/index.html
+++ b/index.html
@@ -4431,3 +4431,5 @@
 <script src="app.js"></script>
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
