--- a/index.html
+++ b/index.html
@@ -1423,3 +1423,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Improved accessibility -->
