--- a/index.html
+++ b/index.html
@@ -4433,3 +4433,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
