--- a/index.html
+++ b/index.html
@@ -4435,3 +4435,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
