--- a/index.html
+++ b/index.html
@@ -1431,3 +1431,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
