--- a/index.html
+++ b/index.html
@@ -1435,3 +1435,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
