--- a/index.html
+++ b/index.html
@@ -1433,3 +1433,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
