--- a/index.html
+++ b/index.html
@@ -1449,3 +1449,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
