--- a/index.html
+++ b/index.html
@@ -4477,3 +4477,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
