--- a/index.html
+++ b/index.html
@@ -4471,3 +4471,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
