--- a/index.html
+++ b/index.html
@@ -4473,3 +4473,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
