--- a/index.html
+++ b/index.html
@@ -4481,3 +4481,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
