--- a/index.html
+++ b/index.html
@@ -4483,3 +4483,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<link rel="stylesheet" href="styles.css">
