--- a/index.html
+++ b/index.html
@@ -1453,3 +1453,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
