--- a/index.html
+++ b/index.html
@@ -1455,3 +1455,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
