--- a/index.html
+++ b/index.html
@@ -1461,3 +1461,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
