--- a/index.html
+++ b/index.html
@@ -1451,3 +1451,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
