--- a/index.html
+++ b/index.html
@@ -1469,3 +1469,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
