--- a/index.html
+++ b/index.html
@@ -4509,3 +4509,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
