--- a/index.html
+++ b/index.html
@@ -1477,3 +1477,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
