--- a/index.html
+++ b/index.html
@@ -4511,3 +4511,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<script src="app.js"></script>
