--- a/index.html
+++ b/index.html
@@ -1501,3 +1501,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
