--- a/index.html
+++ b/index.html
@@ -4525,3 +4525,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
