--- a/index.html
+++ b/index.html
@@ -4535,3 +4535,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
