--- a/index.html
+++ b/index.html
@@ -4533,3 +4533,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
