--- a/index.html
+++ b/index.html
@@ -4543,3 +4543,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
