--- a/index.html
+++ b/index.html
@@ -4537,3 +4537,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
