--- a/index.html
+++ b/index.html
@@ -4539,3 +4539,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
