--- a/index.html
+++ b/index.html
@@ -4541,3 +4541,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
