--- a/index.html
+++ b/index.html
@@ -4555,3 +4555,5 @@
 <script src="app.js"></script>
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
