--- a/index.html
+++ b/index.html
@@ -1517,3 +1517,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
