--- a/index.html
+++ b/index.html
@@ -4557,3 +4557,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
