--- a/index.html
+++ b/index.html
@@ -1527,3 +1527,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
