--- a/index.html
+++ b/index.html
@@ -4559,3 +4559,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
