--- a/index.html
+++ b/index.html
@@ -4575,3 +4575,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<link rel="stylesheet" href="styles.css">
