--- a/index.html
+++ b/index.html
@@ -1541,3 +1541,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
