--- a/index.html
+++ b/index.html
@@ -4579,3 +4579,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
