--- a/index.html
+++ b/index.html
@@ -4583,3 +4583,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
