--- a/index.html
+++ b/index.html
@@ -1553,3 +1553,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
