--- a/index.html
+++ b/index.html
@@ -1555,3 +1555,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Improved accessibility -->
