--- a/index.html
+++ b/index.html
@@ -4585,3 +4585,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
