--- a/index.html
+++ b/index.html
@@ -1567,3 +1567,5 @@
 <!-- Enhanced user experience -->
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
