--- a/index.html
+++ b/index.html
@@ -4603,3 +4603,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<script src="app.js"></script>
