--- a/index.html
+++ b/index.html
@@ -4597,3 +4597,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
