--- a/index.html
+++ b/index.html
@@ -4613,3 +4613,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
