--- a/index.html
+++ b/index.html
@@ -4609,3 +4609,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
