--- a/index.html
+++ b/index.html
@@ -1577,3 +1577,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
