--- a/index.html
+++ b/index.html
@@ -4619,3 +4619,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
