--- a/index.html
+++ b/index.html
@@ -4621,3 +4621,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
