--- a/index.html
+++ b/index.html
@@ -1581,3 +1581,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<link rel="stylesheet" href="styles.css">
