--- a/index.html
+++ b/index.html
@@ -1591,3 +1591,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
