--- a/index.html
+++ b/index.html
@@ -1587,3 +1587,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
