--- a/index.html
+++ b/index.html
@@ -4637,3 +4637,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
