--- a/index.html
+++ b/index.html
@@ -1593,3 +1593,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
