--- a/index.html
+++ b/index.html
@@ -1597,3 +1597,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
