--- a/index.html
+++ b/index.html
@@ -1595,3 +1595,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
