--- a/index.html
+++ b/index.html
@@ -4639,3 +4639,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
