--- a/index.html
+++ b/index.html
@@ -4643,3 +4643,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
