--- a/index.html
+++ b/index.html
@@ -4657,3 +4657,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
