--- a/index.html
+++ b/index.html
@@ -1619,3 +1619,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
