--- a/index.html
+++ b/index.html
@@ -1621,3 +1621,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
