--- a/index.html
+++ b/index.html
@@ -4679,3 +4679,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
