--- a/index.html
+++ b/index.html
@@ -4691,3 +4691,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
