--- a/index.html
+++ b/index.html
@@ -1633,3 +1633,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
