--- a/index.html
+++ b/index.html
@@ -1639,3 +1639,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
