--- a/index.html
+++ b/index.html
@@ -1643,3 +1643,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
