--- a/index.html
+++ b/index.html
@@ -1647,3 +1647,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
