--- a/index.html
+++ b/index.html
@@ -1645,3 +1645,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
