--- a/index.html
+++ b/index.html
@@ -1665,3 +1665,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
