--- a/index.html
+++ b/index.html
@@ -1667,3 +1667,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
