--- a/index.html
+++ b/index.html
@@ -1671,3 +1671,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<!-- Enhanced user experience -->
