--- a/index.html
+++ b/index.html
@@ -1669,3 +1669,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
