--- a/index.html
+++ b/index.html
@@ -4725,3 +4725,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Enhanced user experience -->
