--- a/index.html
+++ b/index.html
@@ -4745,3 +4745,5 @@
 <!-- Improved accessibility -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
