--- a/index.html
+++ b/index.html
@@ -1713,3 +1713,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
