--- a/index.html
+++ b/index.html
@@ -4747,3 +4747,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
