--- a/index.html
+++ b/index.html
@@ -1711,3 +1711,5 @@
 <!-- Improved accessibility -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
