--- a/index.html
+++ b/index.html
@@ -1717,3 +1717,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<link rel="stylesheet" href="styles.css">
