--- a/index.html
+++ b/index.html
@@ -1715,3 +1715,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
