--- a/index.html
+++ b/index.html
@@ -1725,3 +1725,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
