--- a/index.html
+++ b/index.html
@@ -1729,3 +1729,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<!-- Enhanced user experience -->
