--- a/index.html
+++ b/index.html
@@ -1727,3 +1727,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
