--- a/index.html
+++ b/index.html
@@ -1767,3 +1767,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
