--- a/index.html
+++ b/index.html
@@ -1779,3 +1779,5 @@
 <script src="app.js"></script>
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
