--- a/index.html
+++ b/index.html
@@ -4853,3 +4853,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
