--- a/index.html
+++ b/index.html
@@ -1835,3 +1835,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Improved accessibility -->
