--- a/index.html
+++ b/index.html
@@ -1833,3 +1833,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
