--- a/index.html
+++ b/index.html
@@ -1843,3 +1843,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
