--- a/index.html
+++ b/index.html
@@ -4887,3 +4887,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<!-- Enhanced user experience -->
