--- a/index.html
+++ b/index.html
@@ -4895,3 +4895,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
