--- a/index.html
+++ b/index.html
@@ -4901,3 +4901,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
