--- a/index.html
+++ b/index.html
@@ -4915,3 +4915,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
