--- a/index.html
+++ b/index.html
@@ -1867,3 +1867,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
