--- a/index.html
+++ b/index.html
@@ -4919,3 +4919,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Better SEO optimization -->
