--- a/index.html
+++ b/index.html
@@ -1869,3 +1869,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
