--- a/index.html
+++ b/index.html
@@ -1871,3 +1871,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
