--- a/index.html
+++ b/index.html
@@ -1875,3 +1875,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
