--- a/index.html
+++ b/index.html
@@ -1873,3 +1873,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
