--- a/index.html
+++ b/index.html
@@ -4961,3 +4961,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
