--- a/index.html
+++ b/index.html
@@ -1889,3 +1889,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
