--- a/index.html
+++ b/index.html
@@ -4955,3 +4955,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
