--- a/index.html
+++ b/index.html
@@ -4965,3 +4965,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<script src="app.js"></script>
