--- a/index.html
+++ b/index.html
@@ -4963,3 +4963,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
