--- a/index.html
+++ b/index.html
@@ -4977,3 +4977,5 @@
 <!-- Enhanced user experience -->
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
