--- a/index.html
+++ b/index.html
@@ -4995,3 +4995,5 @@
 <!-- Better SEO optimization -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
