--- a/index.html
+++ b/index.html
@@ -1927,3 +1927,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<link rel="stylesheet" href="styles.css">
