--- a/index.html
+++ b/index.html
@@ -4997,3 +4997,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
