--- a/index.html
+++ b/index.html
@@ -1925,3 +1925,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
