--- a/index.html
+++ b/index.html
@@ -1951,3 +1951,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
