--- a/index.html
+++ b/index.html
@@ -1949,3 +1949,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
