--- a/index.html
+++ b/index.html
@@ -5011,3 +5011,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
