--- a/index.html
+++ b/index.html
@@ -5013,3 +5013,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
