--- a/index.html
+++ b/index.html
@@ -1965,3 +1965,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
