--- a/index.html
+++ b/index.html
@@ -5023,3 +5023,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
