--- a/index.html
+++ b/index.html
@@ -5025,3 +5025,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
