--- a/index.html
+++ b/index.html
@@ -5031,3 +5031,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
