--- a/index.html
+++ b/index.html
@@ -2021,3 +2021,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
