--- a/index.html
+++ b/index.html
@@ -5063,3 +5063,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
