--- a/index.html
+++ b/index.html
@@ -2025,3 +2025,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
