--- a/index.html
+++ b/index.html
@@ -2027,3 +2027,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
