--- a/index.html
+++ b/index.html
@@ -5061,3 +5061,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
