--- a/index.html
+++ b/index.html
@@ -2037,3 +2037,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
