--- a/index.html
+++ b/index.html
@@ -2043,3 +2043,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
