--- a/index.html
+++ b/index.html
@@ -2041,3 +2041,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
