--- a/index.html
+++ b/index.html
@@ -5089,3 +5089,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
