--- a/index.html
+++ b/index.html
@@ -5085,3 +5085,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
