--- a/index.html
+++ b/index.html
@@ -2065,3 +2065,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
