--- a/index.html
+++ b/index.html
@@ -5087,3 +5087,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
