--- a/index.html
+++ b/index.html
@@ -2093,3 +2093,5 @@
 <!-- Enhanced user experience -->
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
