--- a/index.html
+++ b/index.html
@@ -2097,3 +2097,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Better SEO optimization -->
