--- a/index.html
+++ b/index.html
@@ -5109,3 +5109,5 @@
 <script src="app.js"></script>
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
