--- a/index.html
+++ b/index.html
@@ -5133,3 +5133,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
