--- a/index.html
+++ b/index.html
@@ -5143,3 +5143,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<script src="app.js"></script>
