--- a/index.html
+++ b/index.html
@@ -5141,3 +5141,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
