--- a/index.html
+++ b/index.html
@@ -5139,3 +5139,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
