--- a/index.html
+++ b/index.html
@@ -2141,3 +2141,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
