--- a/index.html
+++ b/index.html
@@ -2143,3 +2143,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
