--- a/index.html
+++ b/index.html
@@ -5157,3 +5157,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
