--- a/index.html
+++ b/index.html
@@ -2169,3 +2169,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="styles.css">
+
+<link rel="stylesheet" href="styles.css">
