--- a/index.html
+++ b/index.html
@@ -5185,3 +5185,5 @@
 <meta name="description" content="Updated description">
 
 <script src="app.js"></script>
+
+<!-- Enhanced user experience -->
