--- a/index.html
+++ b/index.html
@@ -5193,3 +5193,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
