--- a/index.html
+++ b/index.html
@@ -5199,3 +5199,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
