--- a/index.html
+++ b/index.html
@@ -5195,3 +5195,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Enhanced user experience -->
