--- a/index.html
+++ b/index.html
@@ -5189,3 +5189,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
