--- a/index.html
+++ b/index.html
@@ -2193,3 +2193,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
