--- a/index.html
+++ b/index.html
@@ -5203,3 +5203,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<!-- Enhanced user experience -->
