--- a/index.html
+++ b/index.html
@@ -5225,3 +5225,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
