--- a/index.html
+++ b/index.html
@@ -2235,3 +2235,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
