--- a/index.html
+++ b/index.html
@@ -2237,3 +2237,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
