--- a/index.html
+++ b/index.html
@@ -2241,3 +2241,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
