--- a/index.html
+++ b/index.html
@@ -5227,3 +5227,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<link rel="stylesheet" href="styles.css">
