--- a/index.html
+++ b/index.html
@@ -2281,3 +2281,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
