--- a/index.html
+++ b/index.html
@@ -5265,3 +5265,5 @@
 <!-- Better SEO optimization -->
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
