--- a/index.html
+++ b/index.html
@@ -5269,3 +5269,5 @@
 <!-- Enhanced user experience -->
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
