--- a/index.html
+++ b/index.html
@@ -5283,3 +5283,5 @@
 <!-- Enhanced user experience -->
 
 <script src="app.js"></script>
+
+<meta name="description" content="Updated description">
