--- a/index.html
+++ b/index.html
@@ -5273,3 +5273,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Enhanced user experience -->
