--- a/index.html
+++ b/index.html
@@ -2295,3 +2295,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<meta name="description" content="Updated description">
