--- a/index.html
+++ b/index.html
@@ -2285,3 +2285,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Better SEO optimization -->
