--- a/index.html
+++ b/index.html
@@ -2299,3 +2299,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
