--- a/index.html
+++ b/index.html
@@ -5299,3 +5299,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
